--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,34 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.home.HomeFragment">
-
-    <ScrollView
-        android:layout_width="412dp"
-        android:layout_height="849dp">
+    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:background="@color/eggshell"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".ui.home.HomeFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@color/teal_200">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:gravity="center|center_horizontal"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:foregroundGravity="top"
+                        app:srcCompat="@drawable/logo" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed"
+                        android:gravity="center"
+                        android:text="Albanian Unity: From Tirana to Pristina"
+                        android:textColor="@color/eggshell"
+                        android:textSize="24sp" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+
             <TextView
-                android:id="@+id/mostpopular"
-                android:layout_width="wrap_content"
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Most Popular" />
+                android:padding="20dp"
+                android:text="We’ve got you covered"
+                android:textColor="@color/teal_200"
+                android:textSize="20sp" />
 
-            <androidx.cardview.widget.CardView
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Explore top attractions"
+                android:textColor="@color/teal_200"
+                android:textStyle="bold"></TextView>
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Experience the best of your destination, with attractions, tours, activities and more"
+                android:textColor="@color/teal_700" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="50dp"
+                android:paddingBottom="10dp"
+                android:text="Top Destinations"
+                android:textColor="@color/teal_200"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            </androidx.cardview.widget.CardView>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/card_small"
+                            android:layout_height="@dimen/card_small_vert"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/card_margin"
+                            app:cardCornerRadius="@dimen/card_corner_radius"
+                            app:cardElevation="4dp">
+
+                            <include layout="@layout/gjilan" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/card_small"
+                            android:layout_height="@dimen/card_small_vert"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/card_margin"
+                            app:cardCornerRadius="@dimen/card_corner_radius"
+                            app:cardElevation="4dp">
+
+                            <include layout="@layout/tirana" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/card_small"
+                            android:layout_height="@dimen/card_small_vert"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/card_margin"
+                            app:cardCornerRadius="@dimen/card_corner_radius"
+                            app:cardElevation="4dp">
+
+                            <include layout="@layout/prizeren" />
+
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/card_small"
+                            android:layout_height="@dimen/card_small_vert"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/card_margin"
+                            app:cardCornerRadius="@dimen/card_corner_radius"
+                            app:cardElevation="4dp">
+
+                            <include layout="@layout/gjilan" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/card_small"
+                            android:layout_height="@dimen/card_small_vert"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/card_margin"
+                            app:cardCornerRadius="@dimen/card_corner_radius"
+                            app:cardElevation="4dp">
+
+                            <include layout="@layout/tirana" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/card_small"
+                            android:layout_height="@dimen/card_small_vert"
+                            android:layout_gravity="center"
+                            android:layout_margin="@dimen/card_margin"
+                            app:cardCornerRadius="@dimen/card_corner_radius"
+                            app:cardElevation="4dp">
+
+                            <include layout="@layout/prizeren" />
+
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/card_small"
+                        android:layout_height="@dimen/card_small_vert"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/card_margin"
+                        app:cardCornerRadius="@dimen/card_corner_radius"
+                        app:cardElevation="4dp">
+
+                        <include layout="@layout/gjilan" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/card_small"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/card_margin"
+                        app:cardCornerRadius="@dimen/card_corner_radius"
+                        app:cardElevation="4dp">
+
+                        <include layout="@layout/tirana" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/card_small"
+                        android:layout_height="@dimen/card_small_vert"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/card_margin"
+                        app:cardCornerRadius="@dimen/card_corner_radius"
+                        app:cardElevation="4dp">
+
+                        <include layout="@layout/prizeren" />
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+            </HorizontalScrollView>
 
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
