--- a/app/src/main/res/layout/gjilan.xml
+++ b/app/src/main/res/layout/gjilan.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cream"
-    >
-
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/imageView"
@@ -28,8 +29,5 @@
         android:textColor="@color/teal_200"
         android:text="GJILAN"
         android:textSize="24sp"
-
-        android:textAlignment="center"
-        />
-
+        android:textAlignment="center" />
 </LinearLayout>
