--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <item
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/taxi"
+        android:title="search" />
+    <item
+        android:id="@+id/navigation_cities"
+        android:icon="@drawable/taxi"
+        android:title="cities" />
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
-
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_attractions"
         android:icon="@drawable/logobw"
-        android:title="@string/title_dashboard" />
+        android:title="attractions" />
 
     <item
-        android:id="@+id/navigation_notiftions"
+        android:id="@+id/navigation_travel"
         android:icon="@drawable/taxi"
         android:title="@string/title_notifications" />
 
