--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="card_margin">10dp</dimen>
     <dimen name="card_small">150dp</dimen>
     <dimen name="card_small_vert">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
