--- a/app/src/main/res/layout/fragment_cities.xml
+++ b/app/src/main/res/layout/fragment_cities.xml
@@ -7,7 +7,7 @@
         android:background="@color/eggshell"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.dashboard.DashboardFragment">
+        tools:context=".CitiesFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
