--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,30 +8,30 @@
 
     <fragment
         android:id="@+id/navigation_search"
-        android:name="com.example.albnb.ui.home.HomeFragment"
+        android:name="com.example.albnb.SearchFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/navigation_cities"
-        android:name="com.example.albnb.ui.dashboard.DashboardFragment"
+        android:name="com.example.albnb.CitiesFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_cities" />
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.albnb.ui.home.HomeFragment"
+        android:name="com.example.albnb.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_attractions"
-        android:name="com.example.albnb.ui.home.HomeFragment"
+        android:name="com.example.albnb.AttractionsFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_attractions" />
 
     <fragment
         android:id="@+id/navigation_travel"
-        android:name="com.example.albnb.ui.notifications.NotificationsFragment"
+        android:name="com.example.albnb.TravelFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_travel" />
 </navigation>
