--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -1,235 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:background="@color/eggshell"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".TravelFragment">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <FrameLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@color/teal_200">
-
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:gravity="center|center_horizontal"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:foregroundGravity="top"
-                app:srcCompat="@drawable/logo" />
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black"
+                />
             <TextView
-                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Book your airport taxi"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/dark_blue"
+                android:textSize="24sp"
+                tools:layout_editor_absoluteX="150dp"
+                tools:layout_editor_absoluteY="20dp"
+                android:fontFamily="serif"/>
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                    android:layout_gravity="center"
+                android:backgroundTint="#004EA8"
+                android:text="Explore deals"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold" />
+
+            <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:gravity="center"
-                android:text="Albanian Unity: From Tirana to Pristina"
-                android:textColor="@color/eggshell"
-                android:textSize="24sp" />
+                android:columnCount="1"
+                android:rowCount="1"
+                android:layout_marginTop="16dp">
 
-        </LinearLayout>
 
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="We’ve got you covered"
-        android:textColor="@color/teal_200"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="Explore top attractions"
-        android:textColor="@color/teal_200"
-        android:textStyle="bold"></TextView>
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Experience the best of your destination, with attractions, tours, activities and more"
-        android:textColor="@color/teal_700" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingTop="50dp"
-        android:paddingBottom="10dp"
-        android:text="Top Destinations"
-        android:textColor="@color/teal_200"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="220dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="4dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/taxi" />
+            </GridLayout>
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/card_small"
-                    android:layout_height="@dimen/card_small_vert"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="4dp">
-
-                    <include layout="@layout/gjilan" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/card_small"
-                    android:layout_height="@dimen/card_small_vert"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="4dp">
-
-                    <include layout="@layout/tirana" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/card_small"
-                    android:layout_height="@dimen/card_small_vert"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="4dp">
-
-                    <include layout="@layout/prizeren" />
-
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/card_small"
-                    android:layout_height="@dimen/card_small_vert"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="4dp">
-
-                    <include layout="@layout/gjilan" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/card_small"
-                    android:layout_height="@dimen/card_small_vert"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="4dp">
-
-                    <include layout="@layout/tirana" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/card_small"
-                    android:layout_height="@dimen/card_small_vert"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="4dp">
-
-                    <include layout="@layout/prizeren" />
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-        </LinearLayout>
-    </HorizontalScrollView>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/card_small"
-                android:layout_height="@dimen/card_small_vert"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/card_margin"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="4dp">
-
-                <include layout="@layout/gjilan" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/card_small"
+                android:layout_height="2dp"
+                android:background="@color/black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Popular rental car brands"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/card_margin"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="4dp">
-
-                <include layout="@layout/tirana" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/card_small"
-                android:layout_height="@dimen/card_small_vert"
+                android:textStyle="bold"
+                android:textColor="@color/dark_blue"
+                android:textSize="20sp"
+                tools:layout_editor_absoluteX="150dp"
+                tools:layout_editor_absoluteY="20dp"
+                android:fontFamily="serif"/>
+            <ImageView
+                android:layout_width="390dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/card_margin"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="4dp">
+                android:layout_margin="4dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/travelbrands" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Public Transport in Prishtina and Tirana"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/dark_blue"
+                android:textSize="16sp"
+                tools:layout_editor_absoluteX="150dp"
+                tools:layout_editor_absoluteY="20dp"
+                android:fontFamily="serif"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_margin="4dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/urban" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Trafiku Urban"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/dark_blue"
+                android:textSize="16sp"
+                tools:layout_editor_absoluteX="150dp"
+                tools:layout_editor_absoluteY="20dp"
+                android:fontFamily="serif"/>
+                     </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_margin="4dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/urban1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tirana Urban"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/dark_blue"
+                android:textSize="16sp"
+                tools:layout_editor_absoluteX="150dp"
+                tools:layout_editor_absoluteY="20dp"
+                android:fontFamily="serif"/>
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black"
+                />
 
-                <include layout="@layout/prizeren" />
 
-            </androidx.cardview.widget.CardView>
+
+
+
+
 
         </LinearLayout>
-    </HorizontalScrollView>
+    </ScrollView>
 
-</LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
