--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Heading -->
+
     <TextView
         android:id="@+id/booking_heading"
         android:layout_width="wrap_content"
@@ -15,7 +15,6 @@
         android:layout_gravity="center_horizontal"
         android:paddingBottom="16dp" />
 
-    <!-- Input: Number of Rooms -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +26,7 @@
         android:hint="Enter number of rooms"
         android:inputType="number" />
 
-    <!-- Input: Number of People -->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +38,6 @@
         android:hint="Enter number of people"
         android:inputType="number" />
 
-    <!-- Input: Event or Hotel -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,7 +58,7 @@
             android:text="Event" />
     </RadioGroup>
 
-    <!-- Input: Check-in and Check-out Dates -->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,8 +79,18 @@
         android:layout_height="wrap_content"
         android:hint="Select check-out date"
         android:focusable="false" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Email:" />
+    <EditText
+        android:id="@+id/input_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your email"
+        android:inputType="textEmailAddress" />
 
-    <!-- Submit Button -->
+
     <Button
         android:backgroundTint="@color/teal_200"
         android:id="@+id/button_submit_booking"
